everything/gitops/apps/n-back/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n-back-frontend
  namespace: n-back
  labels:
    app: n-back-frontend
spec:
  type: ClusterIP
  selector:
    app: n-back-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
